--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "ACAL"
 title_separator          : "-"
 name                     : &name "ACAL"
 description              : &description "personal description"
-url                      : https://ur-acal.github.io/ur-acal/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://ur-acal.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+baseurl                  : "/ur-acal" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
